# Zipline-Casper

./: .gitattributes  .gitignore  .gitmodules  404.html  Cargo.toml  README.md  background.html  containers.html  contracts.html  contributions.html  finality_client.html  future_work.html  index.html  intro.html  justfile  known_issues_and_attacks.html  overview.html  print.html  properties.html  searchindex.js  searchindex.json  verifier.html
.github/workflows/: gh-pages.yml  mips.yml  preprocessor.yml  rust.yml  template-rust.yml  test-contracts.yaml  test-mips.yml
contracts/: README.md  foundry.toml
contracts/lib/openzeppelin-contracts/: package-lock.json
contracts/lib/openzeppelin-contracts/contracts/GSN/: GSNRecipient.sol  GSNRecipientERC20Fee.sol  GSNRecipientSignature.sol  IRelayHub.sol  IRelayRecipient.sol
contracts/lib/openzeppelin-contracts/contracts/access/: AccessControl.sol  Ownable.sol  TimelockController.sol
contracts/lib/openzeppelin-contracts/contracts/cryptography/: ECDSA.sol
contracts/lib/openzeppelin-contracts/contracts/drafts/: EIP712.sol  ERC20Permit.sol  IERC20Permit.sol
contracts/lib/openzeppelin-contracts/contracts/introspection/: ERC165.sol  ERC165Checker.sol  ERC1820Implementer.sol
contracts/lib/openzeppelin-contracts/contracts/math/: SignedSafeMath.sol
contracts/lib/openzeppelin-contracts/contracts/mocks/: AddressImpl.sol  ArraysImpl.sol  BadBeacon.sol  CallReceiverMock.sol  ClashingImplementation.sol  Create2Impl.sol  DummyImplementation.sol  EIP712External.sol  ERC1155BurnableMock.sol  ERC1155Mock.sol  ERC1155PausableMock.sol  ERC1155ReceiverMock.sol  ERC165CheckerMock.sol  ERC20BurnableMock.sol  ERC20CappedMock.sol  ERC20DecimalsMock.sol  ERC20Mock.sol  ERC20PausableMock.sol  ERC20PermitMock.sol  ERC20SnapshotMock.sol  ERC721BurnableMock.sol  ERC721GSNRecipientMock.sol  ERC721Mock.sol  ERC721PausableMock.sol  ERC721ReceiverMock.sol  ERC777Mock.sol  ERC777SenderRecipientMock.sol  EnumerableMapMock.sol  EtherReceiverMock.sol  GSNRecipientERC20FeeMock.sol  GSNRecipientMock.sol  GSNRecipientSignatureMock.sol  InitializableMock.sol  MerkleProofWrapper.sol  MultipleInheritanceInitializableMocks.sol  OwnableMock.sol  PausableMock.sol  PullPaymentMock.sol  ReentrancyAttack.sol  ReentrancyMock.sol  (+5 more)
contracts/lib/openzeppelin-contracts/contracts/payment/: PaymentSplitter.sol  PullPayment.sol
contracts/lib/openzeppelin-contracts/contracts/presets/: ERC1155PresetMinterPauser.sol  ERC20PresetFixedSupply.sol  ERC20PresetMinterPauser.sol  ERC721PresetMinterPauserAutoId.sol  ERC777PresetFixedSupply.sol
contracts/lib/openzeppelin-contracts/contracts/proxy/: BeaconProxy.sol  Clones.sol  Initializable.sol  Proxy.sol  ProxyAdmin.sol  (+1 more)
contracts/script/: DeployWithMIPS.s.sol
contracts/src/: CGOrchestrator.sol  Constants.sol  Zipline.sol
contracts/src/MIPS/: CannonMIPSMemory.sol  MIPS.sol  MIPSExecutor.sol  MIPSMemory.sol
contracts/src/MIPS/lib/: Lib_BytesUtils.sol  Lib_MerkleTrie.sol  Lib_RLPReader.sol
contracts/src/interfaces/: IExecutor.sol  IExecutorIO.sol
contracts/src/lib/: SSZ.sol
contracts/test/: CGOrchestrator.sol  MockExecutor.sol  MockPlayer.sol  Zipline.t.sol
demo/: README.md  demo.js
demo/demo_data/: candidate_cp.txt  fraud_candidate_cp.txt  trusted_cp.txt
demo/lib/: contract_calls.js  emulator_calls.js
emulator/: Cargo.toml  README.md
emulator/src/: cli.rs  lib.rs  main.rs  oracle_provider.rs  ram.rs  unicorn.rs
finality-client/: Cargo.toml  README.md
finality-client/libs/crypto/: Cargo.toml  README.md
finality-client/libs/crypto/src/: bls.rs  hash.rs  lib.rs  spec_tests.rs
finality-client/libs/ssz-rs/ssz-rs/: Cargo.toml
finality-client/libs/ssz-rs/ssz-rs-derive/src/: lib.rs
finality-client/libs/ssz-rs/ssz-rs/examples/: container_with_some_types.rs
finality-client/libs/ssz-rs/ssz-rs/src/: array.rs  bitlist.rs  bitvector.rs  boolean.rs  de.rs  lib.rs  list.rs  ser.rs  serde.rs  uint.rs  union.rs  vector.rs
finality-client/libs/ssz-rs/ssz-rs/src/merkleization/: mod.rs  proofs.rs
finality-client/libs/test-utils/: Cargo.toml
finality-client/libs/test-utils/src/: lib.rs
finality-client/libs/validator-shuffling/: Cargo.toml
finality-client/libs/validator-shuffling/src/: committee_cache.rs  committee_cache_tests.rs  lib.rs  seed.rs  shuffle_list.rs
finality-client/libs/zipline-spec/: Cargo.toml
finality-client/libs/zipline-spec/src/: fork_data.rs  lib.rs
finality-client/src/: attestation.rs  input.rs  lib.rs  signing.rs  ssz_state_reader.rs  state_patch.rs  state_reader.rs  verify.rs
finality-client/tests/: attestation.rs  direct_state_reader.rs  patch.rs  ssz_state_reader.rs  state_proofs.rs  verify.rs
finality-client/tests/attestation_test_case/: mod.rs
finality-client/tests/patch_test_case/: mod.rs
finality-client/tests/state_proof_test_case/: mod.rs
finality-client/tests/test_files/: input.ssz  state196726
finality-client/tests/zipline_test_case/: mod.rs
hashi-adapter/: README.md  foundry.toml  remappings.txt
hashi-adapter/src/: ZiplineAdapter.sol
hashi-adapter/test/: ZiplineAdapter.t.sol
preimage-oracle/: Cargo.toml
preimage-oracle/src/: error.rs  lib.rs  ssz_retrieval.rs
preimage-oracle/src/oracle_backend/: filesystem_oracle.rs  hashmap_oracle.rs  mod.rs
preprocessor/: .gitignore  package.json
preprocessor/src/: api.ts  chainFinality.ts  clock.ts  daemon.ts  getPubkeys.ts  gindices.ts  index.ts  preimage.ts  preprocessor.ts  superAggregate.ts
preprocessor/src/cli/: applyPreset.ts  cli.ts  genAllOptions.ts  genSuperAttestationOptions.ts  getConfig.ts  index.ts  networks.ts  onGracefulShutdown.ts  parseCheckpoint.ts  types.ts
specification/: book.toml
specification/src/: SUMMARY.md  background.md  containers.md  contracts.md  contributions.md  finality_client.md  future_work.md  intro.md  known_issues_and_attacks.md  overview.md  properties.md  verifier.md
zipline-state-transition-mips/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  mips-unknown-none.json
zipline-state-transition-mips/src/: heap.rs  iommu.rs  main.rs
(+31 files in other folders)
