[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# This configuration of BLST can build for MIPS. Need the other one to build tests at the moment
blst = { git = "https://github.com/ec2/blst", rev = "179bf0e", default-features = false, features = [ "portable", "no-threads" ] }
# blst = { version = "0.3.6" }
sha2 = { version = "0.10.6", default-features = false }

[dev-dependencies]
test-utils = { path = "../test-utils" }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus" }
serde = "1.0.158"
serde_with = "1.13.0"

