[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.158"
serde_yaml = "0.9.19"
snap = "1.1.0"
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", default-features = false }
